--- a/krneki/game/Gkrneki.html
+++ b/krneki/game/Gkrneki.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="Gkrnekisheet.css">
         <title>krneki</title>
         <link rel="icon" type="image/x-icon" href="ikona.svg">
 
@@ -20,9 +20,14 @@
         <script defer src="Class/block.js"></script>
         <script defer src="index.js"></script>
 
-        <div id="link">
-            <a href="https://www.youtube.com/channel/UC68Gz9JHdJj5umBdC-QXPDw">my youtube channel</a>
+        <div id="web-krneki-link">
+            <a href="../web/Wkrneki.html">krneki-web-link</a>
         </div>
+        
+        <div id="web-main-link">
+            <a href="../../main-web/index.html">main-web-link</a>
+        </div>
+
 
     </body>
     
