--- a/krneki/web/Wkrneki.html
+++ b/krneki/web/Wkrneki.html
@@ -1,11 +1,34 @@
-
+<!DOCTYPE html>
 <html>
+
+<head>
+	<link rel="stylesheet" href="Wkrneki.css">
+</head>
 
 <body>
 		
-<p>This is vim.</p>
-<p>this is onoder vim.</p>
-<a href="../game/Gkrneki.html">krneki</a>
+<div class="link">
+
+	<h2>to te bo povežalo do igrice krneki-mf</h2>
+	<a href="../game/Gkrneki.html">krneki-mf</a>
+
+</div>
+
+<div class="dialog">
+
+	<h2>6.1.2014</h2>
+	<p>začel sem delati na moji prvi spletnis igrici</p>
+	<p>ki se je takrat imenovala maifija komedija<p>
+
+</div>
+
+<div class="dialog">
+	
+	<h2>8.1.2024</h2>
+	<p>danes sem naredil git repozetori</p>
+	<p>objavil moj prvi dev-log</p>
+	
+</div>
 
 </body>
 
