--- a/krneki/game/Gkrneki.html
+++ b/krneki/game/Gkrneki.html
@@ -25,7 +25,7 @@
         </div>
         
         <div id="web-main-link">
-            <a href="../../main-web/index.html">main-web-link</a>
+            <a href="../../docs/index.html">main-web-link</a>
         </div>
 
 
