--- a/krneki/web/Wkrneki.html
+++ b/krneki/web/Wkrneki.html
@@ -10,7 +10,7 @@
 <div class="link">
 
 	<h2>to te bo povežalo do igrice krneki-mf</h2>
-	<a href="../game/Gkrneki.html">krneki-mf</a>
+	<a href="../game/index.html">krneki-mf</a>
 
 </div>
 
